# ai-agent-evals

./: .checkov.yml  .gitignore  .pre-commit-config.yaml  NOTICE.txt  README.md  action.py  action.yml  overview.md  pyproject.toml  requirements-dev.txt  requirements.txt  vss-extension.json
.azure-devops/: .npmrc  cg.yaml  common-steps.yml  release.yaml
.github/linters/: .editorconfig  .isort.cfg  .jscpd.json
.github/workflows/: ado-extension-pack.yaml  ci.yaml  evaluation.yaml  helloworld.yml  lint.yaml  test_action.yaml
analysis/: __init__.py  analysis.py  custom_eval.py  evaluator-scores.yaml  render.py  summary.py
evaluation/: eval-dataset.csv
samples/: ado-multiple-agents.yml  all-parameters.yml  multiple-agents.yml  single-agent-v1.yml  single-agent.yml
samples/data/: dataset-small.json  dataset-tiny.json  dataset.json
scripts/: download-previousVersions.ps1  download-vstsTaskSdk.ps1  set-variables.ps1  setup-dev.ps1  setup.ps1  utilities.ps1
tasks/AIAgentEvaluation/: check-python.ps1  run.ps1  task.json
tasks/AIAgentReport/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
tasks/AIAgentReport/src/: artifact-client.tsx  error.tsx  github-flavored-markdown.tsx  main.tsx
tests/: test_analysis.py  test_render.py  test_retry_logic.py  test_summary.py  test_validation.py
tests/data/: golden-dataset-small.json  golden-dataset.json
tests/snapshots/fmt_badge/: changed-strong.md  changed-weak.md  degraded-strong.md  degraded-weak.md  fail.md  hex-color.md  improved-strong.md  pass.md  (+4 more)
(+17 files in other folders)
