[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-evals"
version = "0.1.0"
description = "AI Agents Evaluation Tools"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=1.3.0",  # Ensure colalign parameter support
    "numpy",
    "pyyaml",
    "scipy",
    "azure-ai-evaluation==1.5.0",
    "azure-ai-projects==1.0.0b10",
    "azure-identity",
    "aiohttp>=3.8.5",
]

[project.optional-dependencies]
dev = [
    "python-dotenv",
    "pytest",
    "pytest-snapshot",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["analysis"]
